--- a/src/main/resources/templates/addProduct.html
+++ b/src/main/resources/templates/addProduct.html
@@ -21,25 +21,25 @@
 
                 <input class="form-control" placeholder="Product Name" th:field="*{name}"
                        type="text"/>
-                <p th:errors="*{name}"
-                   th:if="${#fields.hasErrors('name')}">ProductName Error</p>
+                <p class="alert-danger" th:if="${#fields.hasErrors('name')}"
+                   th:errors="*{name}" >ProductName Error</p>
                 <div style="clear: both; display: block; height: 10px;"></div>
 
                 <input class="form-control" placeholder="Description" th:field="*{description}"
                        type="text"/>
-                <p th:errors="*{description}"
-                   th:if="${#fields.hasErrors('description')}">Description Error</p>
+                <p class="alert-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"
+                   >Description Error</p>
 
                 <input class="form-control" placeholder="Enter Price" th:field="*{price}"
                        type="text"/>
-                <p th:errors="*{price}" th:if="${#fields.hasErrors('price')}">Price
+                <p class="alert-danger" th:if="${#fields.hasErrors('price')}" th:errors="*{price}" >Price
                     Error</p>
                 <div style="clear: both; display: block; height: 10px;"></div>
 
                 <input class="form-control" placeholder="Add Quantity" th:field="*{quantity}"
                        type="text"/>
-                <p th:errors="*{quantity}"
-                   th:if="${#fields.hasErrors('quantity')}">Quantity Error</p>
+                <p class="alert-danger"
+                   th:if="${#fields.hasErrors('quantity')}" th:errors="*{quantity}">Quantity Error</p>
                 <div style="clear: both; display: block; height: 10px;"></div>
 
 				<div class="custom-file mb-3">
