--- a/src/main/resources/templates/update-product.html
+++ b/src/main/resources/templates/update-product.html
@@ -23,24 +23,24 @@
 
                 <input type="text" th:field="*{name}" class="form-control"
                        placeholder="Product Name" />
-                <p th:if="${#fields.hasErrors('name')}"
+                <p class="alert-danger" th:if="${#fields.hasErrors('name')}"
                    th:errors="*{name}">ProductName Error</p>
                 <div style="clear: both; display: block; height: 10px;"></div>
 
                 <input type="text" th:field="*{description}" class="form-control"
                        placeholder="Description" />
-                <p th:if="${#fields.hasErrors('description')}"
+                <p  class="alert-danger"th:if="${#fields.hasErrors('description')}"
                    th:errors="*{description}">Description Error</p>
 
                 <input type="text" th:field="*{price}" class="form-control"
                        placeholder="Enter Price" />
-                <p th:if="${#fields.hasErrors('price')}" th:errors="*{price}">Price
+                <p class="alert-danger" th:if="${#fields.hasErrors('price')}" th:errors="*{price}">Price
                     Error</p>
                 <div style="clear: both; display: block; height: 10px;"></div>
 
                 <input type="text" th:field="*{quantity}" class="form-control"
                        placeholder="Add Quantity" />
-                <p th:if="${#fields.hasErrors('quantity')}"
+                <p class="alert-danger" th:if="${#fields.hasErrors('quantity')}"
                    th:errors="*{quantity}">Quantity Error</p>
                 <div style="clear: both; display: block; height: 10px;"></div>
 					<input type="text" th:field="*{photo}" hidden="true"/>
