fix home products image

--- a/src/main/resources/templates/layouts/dashboard_layout.html
+++ b/src/main/resources/templates/layouts/dashboard_layout.html
@@ -33,7 +33,7 @@
 		<div id="main-content" layout:fragment="main-content">
 		</div>
 	</div>
-	<footer th:replace="fragments/dashboard_footer :: footer"></footer>
+	<!-- <footer th:replace="fragments/dashboard_footer :: footer"></footer> -->
 <script th:src="@{/js/tab.js}"></script>
 <script th:src="@{/js/number-spinner.js}"></script>
 <script th:src="@{/js/notification.js}"></script>
