--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -6,8 +6,8 @@
 <head>
 <title>Sign-up</title>
 </head>
-<body style="text-align: center">
-	<div class="col" layout:fragment="main-content">
+<body>
+	<div class="col" layout:fragment="main-content" style="text-align: center">
 		<div class="row">
 			<div class="col-md-4"></div>
 			<div class="col-md-4">
