--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -53,7 +53,7 @@
                     <div class="card-body">
                         <h5 class="card-title" th:text="${product.name}">Card title</h5>
                         <p class="card-text" style="height: 48px;" th:text="${product.description}"></p>
-                        <strong> $(<span th:text="${product.price}"></span>)</strong>
+                        <strong> <span th:text="${product.price} + ' $'"></span></strong>
                         <p class="card-text" th:if="${product.quantity > 0}"><small class="text-muted">In
                             Stock</small></p>
                         <p class="card-text" th:if="${product.quantity <= 0}"><small class="text-muted">Out Of
