--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -27,7 +27,8 @@
                     <td>
                         <div class="dropdown">
                             <button class="btn btn-outline-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                               <span th:text="${item.getStatus()}">status</span>
+                               <span th:if="${item.status == item.getStatus().PREPARED}"><span th:text="${item.getStatus().PAYMENT_CONFIRMED}"></span></span>
+                                <span th:if="${item.status != item.getStatus().PREPARED}"><span th:text="${item.getStatus()}"></span></span>
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <div th:if="${item.status == item.getStatus().PREPARED}"><a class="btn btn-outline-danger" th:href="@{'/changeStatus'(id=${item.id},status=${item.getStatus().CANCELLED})}">CANCELLED</a></div>
@@ -73,17 +74,24 @@
 
                     <td th:if="${order.status != order.getStatus().PREPARED}">
 
-                            <a th:href="@{'/itemStatus'(id=${item.id})}"> <span th:text="${item.status}">status</span> </a>
+                            <a th:href="@{'/itemStatus'(id=${item.id})}">
+                                <span th:if="${item.status == item.getStatus().PREPARED}"><span th:text="${item.getStatus().PAYMENT_CONFIRMED}"></span></span>
+                                <span th:if="${item.status != item.getStatus().PREPARED}"><span th:text="${item.status}"></span></span>
+                            </a>
 
 <!--                        <span class="btn btn-outline-info" ></span>-->
 <!--                        <span th:text="${item.getStatus()}">Shipping Status</span>-->
                     </td>
                     <td>
-
+                        <span th:if="${item.status == item.getStatus().PREPARED}">
+								<a class="navbar-brand mr-1" th:href="@{'/removeOrderItem'(id= ${item.getId()})}">
+									<img th:src="@{/img/delete.png}" style="width: 30px">
+                                </a>
+                        </span>
                         <span th:if="${item.status == item.getStatus().DELIVERED}">
 								<a class="btn btn-danger btn-sm mb-3"
                                    href="#">Review </a>
-                        		</span>
+                        </span>
                     </td>
                 </tr>
                 </tbody>
