--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -87,6 +87,7 @@
                     <button class="btn btn-info btn-sm mb-3" disabled
                             style="pointer-events: none;" type="button">Add Product
                     </button>
+              </span>
             </div>
         </div>
 
